# coconut_swe

./: README.md  main.py  new_req.txt  pyproject.toml  requirements.txt
config/swe_swiss_coconut/: train.toml
src/: train.py
src/inno_swe_reasoner/: config.py  optim.py
src/inno_swe_reasoner/coconut/: coconut_utils.py  config.py  data.py  mock_data.json  model.py  notes.txt
src/inno_swe_reasoner/utils/: ckpt.py  logger.py  monitor.py  pydantic_config.py  utils.py
