[project]
name = "inno-swe-reasoner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "hf-transfer>=0.1.9",
    "jaxtyping>=0.3.3",
    "loguru>=0.7.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "tomli>=2.3.0",
    "tomli-w>=1.2.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]

[project.scripts]
coconut = "inno_swe_reasoner.coconut.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/inno_swe_reasoner"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
]
